delete folder build

--- a/source/index.html
+++ b/source/index.html
@@ -85,21 +85,9 @@
                     <button class="pets__arrow pets__arrow--left button__arrow button__arrow--left" aria-label="Листать влево"></button>
                     <div class="pets__photo--wrapper">
                         <div class="pets__photo--inner">
-                            <img class="pets__photo" src="img/Cat1.jpg" srcset="img/Cat1@2x.jpg 2x" alt="Белый окрас" width="517" height="214">
-                            <img class="pets__photo" src="img/Cat3.jpg" srcset="img/Cat3@2x.jpg 2x" alt="Белый окрас" width="471" height="485">
-                            <img class="pets__photo" src="img/Cat2.jpg" srcset="img/Cat2@2x.jpg 2x" alt="Белый окрас" width="517" height="214">
-                            <!-- <picture>
-                                <source type="image/webp" srcset="img/Cat1.webp 1x, img/Cat1@2x.webp 2x">
-                                <img class="pets__photo" src="img/Cat1.jpg" srcset="img/Cat1@2x.jpg 2x" alt="Белый окрас" width="517">
-                            </picture>
-                            <picture>
-                                <source type="image/webp" srcset="img/Cat3.webp 1x, img/Cat3@2x.webp 2x">
-                                <img class="pets__photo" src="img/Cat3.jpg" srcset="img/Cat3@2x.jpg 2x" alt="Белый окрас" width="471">
-                            </picture>
-                            <picture>
-                                <source type="image/webp" srcset="img/Cat2.webp 1x, img/Cat2@2x.webp 2x">
-                                <img class="pets__photo" src="img/Cat2.jpg" srcset="img/Cat2@2x.jpg 2x" alt="Белый окрас" width="517">
-                            </picture> -->
+                            <img class="pets__photo" src="img/cat1.jpg" srcset="img/cat1@2x.jpg 2x" alt="Белый окрас" width="517" height="214">
+                            <img class="pets__photo" src="img/cat3.jpg" srcset="img/cat3@2x.jpg 2x" alt="Белый окрас" width="471" height="485">
+                            <img class="pets__photo" src="img/cat2.jpg" srcset="img/cat2@2x.jpg 2x" alt="Белый окрас" width="517" height="214">
                         </div>
                     </div>
                     <button class="pets__arrow pets__arrow--right button__arrow button__arrow--right" aria-label="Листать вправо"></button>
